--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <h1>Bienvenidos a si</h1>
+    <p>buenos dias señoritos buenos dias señortias pasen fto polla
+
+    </p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam deserunt dicta minima officiis, sunt maiores assumenda veniam ullam debitis similique laborum aliquam exercitationem expedita voluptate quibusdam, nesciunt quisquam nisi odio.
 </body>
 
 </html>
